--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   go_router: ^14.4.1
   sqflite: ^2.4.1
   path: ^1.9.0
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
