--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   flutter_svg: ^2.1.0
+  modal_bottom_sheet: ^3.0.0
 
 dev_dependencies:
   flutter_test:
